--- a/SearchBank/Web.config
+++ b/SearchBank/Web.config
@@ -2,7 +2,7 @@
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
-  -->    
+  -->
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
@@ -12,11 +12,15 @@
     <add name="ModelContext" connectionString="Data Source= localhost ;Initial Catalog= SearchBank ;User Id=sa;Password=huddle;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
+    <!-- Add your Google Maps API Key from Google -->
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <!-- And add your Commercial Key from Subgurim if you have purchased one -->
+    <add key="googlemaps.subgurim.net" value="" />
+    <add key="googlemaps.subgurim.net_Commercial" value="" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
@@ -34,6 +38,9 @@
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.WebPages" />
       </namespaces>
+      <controls>
+        <add tagPrefix="gmaps" namespace="Subgurim.Controles" assembly="GMaps" />
+      </controls>
     </pages>
   </system.web>
   <system.webServer>
@@ -55,7 +62,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
